updata delete popconfirm

--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -374,4 +374,12 @@
         line-height: 30px
     }
 }}
+
+:global {
+    .ant-popover {
+        width: 200px !important;
+    }
+}
+
+
 @import url(./mobile.less);
