--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -1,9 +1,15 @@
-.exportTit{
+.subTit{
     padding: 20px 0 10px;
     font-weight: bold;
     font-size: 16px;
     &:first-child{
         padding-top: 0;
+    }
+}
+.boxliner{
+    border-bottom: 1px solid #eee;
+    &:nth-last-child(1){
+        border: none;
     }
 }
 .formlabelcss{
