--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -1,4 +1,5 @@
 .subTit{
+    display: block;
     padding: 20px 0 10px;
     font-weight: bold;
     font-size: 16px;
@@ -8,6 +9,7 @@
 }
 .boxliner{
     border-bottom: 1px solid #eee;
+    margin-bottom: 20px;
 }
 .formlabelcss{
     :global {
@@ -18,3 +20,8 @@
             margin-bottom: 0px
         }
 }}
+.delButton{
+    position: absolute;
+    right: 0; top: -10px;
+    z-index: 1;
+}
